# inspiredco-client

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
inspiredco/: client_base.py  critique.py  critique_test.py
inspiredco/critique_utils/: exceptions.py
