[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "inspiredco"
authors = [
    {name = "Inspired Cognition", email = "contact@inspiredco.ai"},
]
description = "Inspired Cognition API client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests>=2.27.0",
]
dynamic = ["version"]

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["inspiredco"]

[tool.hatch.version]
path = "inspiredco/version.py"
