[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "inspiredco"
authors = [
    {name = "Inspired Cognition", email = "support@inspiredco.ai"},
]
description = "Inspired Cognition API client"
readme = "README.md"
repository = "https://github.com/inspired-cognition/inspiredco-client"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.27.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-mock>=3.0.0",
]

[tool.hatch.build]
include = [
    "*.py",
]
exclude = [
    "*_test.py",
]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["inspiredco"]

[tool.hatch.version]
path = "inspiredco/version.py"
